corrected wrapping issue on channel page

--- a/less/dotsub-legacy.less
+++ b/less/dotsub-legacy.less
@@ -346,6 +346,7 @@ div.featuredMedia {
 .userVideoItem, .userVideo .thumbholder, .userVideo {
     margin-left: 0;
     padding-left: 5px;
+    overflow: hidden;
 }
 
 .otherMedia {
